--- a/index.html
+++ b/index.html
@@ -64,20 +64,22 @@
             </marquee>
         </div>
     </div>
-
-    <div class="main-section">
-        <div class="container-about">
-            <img class=aboutjpeg src="about.jpeg" alt="Notebook">
-            <div class="content" style="width: 49.6%;">
-                <h6>About Us</h6>
-                <h1>Hi, Welcome To Our Rotract Club Of Jeppiaar University</h1>
-                <p>Rotaract clubs bring together people ages 18 and older to exchange ideas with
-                     leaders in the community, develop leadership and professional skills, and have fun through 
-                     service. In communities worldwide, Rotary and Rotaract members work side by side to take action through service.
-                </p>
+        <div id="cord" class="card mb-3" style="max-width: 80%;" >
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="about.jpeg" class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h1 class="card-title" style="text-decoration: underline; color: red;">About Us</h1>
+                  <h1>Hi, Welcome To Our Rotract Club Of Jeppiaar University</h1>
+                  <p class="card-text" style="padding-top: 2rem;">Rotaract clubs bring together people ages 18 and older to exchange ideas with
+                    leaders in the community, develop leadership and professional skills, and have fun through 
+                    service. In communities worldwide, Rotary and Rotaract members work side by side to take action through service.</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div> 
         <hr>
         <div class="notification">
             <div class="agenta">
@@ -162,8 +164,8 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h1 class="card-title" style="text-decoration: underline;">Staff~Coordinator</h1>
-              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati nesciunt odit modi fuga eos sit in eaque sed distinctio deleniti voluptatem, odio voluptas a nisi accusantium esse? Architecto, nesciunt reiciendis?</p>
+              <h1 class="card-title" style="text-decoration: underline; color: red;">Staff~Coordinator</h1>
+              <p class="card-text" style="padding-top: 2rem;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati nesciunt odit modi fuga eos sit in eaque sed distinctio deleniti voluptatem, odio voluptas a nisi accusantium esse? Architecto, nesciunt reiciendis?</p>
             </div>
           </div>
         </div>
@@ -207,6 +209,42 @@
             <p class="card-text">name</p>
           </div>
         </div>
+        <div class="card" style="width: 18rem;">
+            <img src="about.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">name</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="about.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">name</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="about.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">name</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="about.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">name</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="about.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">name</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="about.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">name</p>
+            </div>
+          </div>
       </div>
     </marquee>
     <hr>
